; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp-tls/extr_esp_tls.c_esp_tls_conn_http_new.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp-tls/extr_esp_tls.c_esp_tls_conn_http_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.http_parser_url = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i32 }

@UF_HOST = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @esp_tls_conn_http_new(i8* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.http_parser_url, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = call i32 @http_parser_url_init(%struct.http_parser_url* %6)
  %9 = load i8*, i8** %4, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @strlen(i8* %10)
  %12 = call i32 @http_parser_parse_url(i8* %9, i32 %11, i32 0, %struct.http_parser_url* %6)
  %13 = call i32* (...) @esp_tls_init()
  store i32* %13, i32** %7, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %41

17:                                               ; preds = %2
  %18 = load i8*, i8** %4, align 8
  %19 = getelementptr inbounds %struct.http_parser_url, %struct.http_parser_url* %6, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = load i64, i64* @UF_HOST, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i64 %21
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = getelementptr inbounds i8, i8* %18, i64 %24
  %26 = getelementptr inbounds %struct.http_parser_url, %struct.http_parser_url* %6, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = load i64, i64* @UF_HOST, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i64 %28
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 8
  %32 = load i8*, i8** %4, align 8
  %33 = call i32 @get_port(i8* %32, %struct.http_parser_url* %6)
  %34 = load i32*, i32** %5, align 8
  %35 = load i32*, i32** %7, align 8
  %36 = call i32 @esp_tls_conn_new_sync(i8* %25, i32 %31, i32 %33, i32* %34, i32* %35)
  %37 = icmp eq i32 %36, 1
  br i1 %37, label %38, label %40

38:                                               ; preds = %17
  %39 = load i32*, i32** %7, align 8
  store i32* %39, i32** %3, align 8
  br label %41

40:                                               ; preds = %17
  store i32* null, i32** %3, align 8
  br label %41

41:                                               ; preds = %40, %38, %16
  %42 = load i32*, i32** %3, align 8
  ret i32* %42
}

declare dso_local i32 @http_parser_url_init(%struct.http_parser_url*) #1

declare dso_local i32 @http_parser_parse_url(i8*, i32, i32, %struct.http_parser_url*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32* @esp_tls_init(...) #1

declare dso_local i32 @esp_tls_conn_new_sync(i8*, i32, i32, i32*, i32*) #1

declare dso_local i32 @get_port(i8*, %struct.http_parser_url*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
